--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.7",
+    "@emotion/react": "^11.11.0",
+    "@emotion/sheet": "^1.2.2",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@next/font": "13.1.4",
     "bootstrap": "^5.2.3",
     "emailjs-com": "^3.2.0",
     "next": "13.1.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.0",
-    "react-dom": "18.2.0"
+    "react-calendar": "^4.2.1",
+    "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1"
   }
 }
