--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.7.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
-    "react-phone-input-2": "^2.15.1"
+    "react-phone-input-2": "^2.15.1",
+    "typewriter-effect": "^2.21.0"
   }
 }
