--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-dom": "18.2.0",
     "react-phone-input-2": "^2.15.1",
     "typewriter-effect": "^2.21.0"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
